test/bad/tuples/decl02.px

t: Int*Bool*Char = 1, true
